Corrected dark mode border color.

--- a/client/src/scss/_dark.scss
+++ b/client/src/scss/_dark.scss
@@ -68,7 +68,7 @@ body {
           }
 
           .clear-filter {
-            border-right-color: $gray-900;
+            border-right-color: $dark-gray;
           }
 
           a {
